Updated connection string

--- a/Magenic.Kanban.Api/appsettings.json
+++ b/Magenic.Kanban.Api/appsettings.json
@@ -13,6 +13,6 @@
     }
   },
   "ConnectionStrings": {
-    "MagenicKanbanApiContext": "Server=(localdb)\\mssqllocaldb;Database=MagenicKanbanApiContext-0702f72c-35a0-4b55-9d80-6ef8d2d9ed20;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MagenicKanbanApiContext": "Server=localhost;Database=Magenic.Kanban;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
